downgrade to java 11 compatibility