@@ -151,7 +151,7 @@ class CrateConnectionUriParserTest {
     void singleHost_defaultPort() {
       List<CrateEndpoint> endpoints = CrateConnectionUriParser.parseEndpoints("crate://localhost");
       assertEquals(1, endpoints.size());
-      SocketAddress addr = endpoints.getFirst().getAddress();
+      SocketAddress addr = endpoints.get(0).getAddress();
       assertEquals("localhost", addr.hostName());
       assertEquals(4200, addr.port());
     }
@@ -160,15 +160,15 @@ class CrateConnectionUriParserTest {
     void singleHost_withPort() {
       List<CrateEndpoint> endpoints = CrateConnectionUriParser.parseEndpoints("crate://localhost:4201");
       assertEquals(1, endpoints.size());
-      assertEquals(4201, endpoints.getFirst().getAddress().port());
+      assertEquals(4201, endpoints.get(0).getAddress().port());
     }
 
     @Test
     void multipleHosts() {
       List<CrateEndpoint> endpoints = CrateConnectionUriParser.parseEndpoints("crate://h1:4200,h2,h3:4201");
       assertEquals(3, endpoints.size());
-      assertEquals("h1", endpoints.getFirst().getAddress().host());
-      assertEquals(4200, endpoints.getFirst().getAddress().port());
+      assertEquals("h1", endpoints.get(0).getAddress().host());
+      assertEquals(4200, endpoints.get(0).getAddress().port());
       assertEquals("h2", endpoints.get(1).getAddress().host());
       assertEquals(4200, endpoints.get(1).getAddress().port());
       assertEquals("h3", endpoints.get(2).getAddress().host());
@@ -179,31 +179,31 @@ class CrateConnectionUriParserTest {
     void ipv4Host() {
       List<CrateEndpoint> endpoints = CrateConnectionUriParser.parseEndpoints("crate://192.168.1.1:4200");
       assertEquals(1, endpoints.size());
-      assertEquals("192.168.1.1", endpoints.getFirst().getAddress().host());
-      assertEquals(4200, endpoints.getFirst().getAddress().port());
+      assertEquals("192.168.1.1", endpoints.get(0).getAddress().host());
+      assertEquals(4200, endpoints.get(0).getAddress().port());
     }
 
     @Test
     void ipv6Host_withPort() {
       List<CrateEndpoint> endpoints = CrateConnectionUriParser.parseEndpoints("crate://[::1]:4200");
       assertEquals(1, endpoints.size());
-      assertEquals("::1", endpoints.getFirst().getAddress().host());
-      assertEquals(4200, endpoints.getFirst().getAddress().port());
+      assertEquals("::1", endpoints.get(0).getAddress().host());
+      assertEquals(4200, endpoints.get(0).getAddress().port());
     }
 
     @Test
     void ipv6Host_defaultPort() {
       List<CrateEndpoint> endpoints = CrateConnectionUriParser.parseEndpoints("crate://[2001:db8::1]");
       assertEquals(1, endpoints.size());
-      assertTrue(endpoints.getFirst().getAddress().host().contains("2001") || endpoints.getFirst().getAddress().host().equals("2001:db8::1"));
-      assertEquals(4200, endpoints.getFirst().getAddress().port());
+      assertTrue(endpoints.get(0).getAddress().host().contains("2001") || endpoints.get(0).getAddress().host().equals("2001:db8::1"));
+      assertEquals(4200, endpoints.get(0).getAddress().port());
     }
 
     @Test
     void withUserInfo_ignoresUserForEndpoints() {
       List<CrateEndpoint> endpoints = CrateConnectionUriParser.parseEndpoints("crate://user:pass@host1:4200,host2");
       assertEquals(2, endpoints.size());
-      assertEquals("host1", endpoints.getFirst().getAddress().host());
+      assertEquals("host1", endpoints.get(0).getAddress().host());
       assertEquals("host2", endpoints.get(1).getAddress().host());
     }
 
@@ -240,8 +240,8 @@ class CrateConnectionUriParserTest {
       CrateConnectOptions options = CrateConnectOptions.fromUri("crate://h1:4200,h2/doc");
       List<CrateEndpoint> endpoints = options.getEndpoints();
       assertEquals(2, endpoints.size());
-      assertEquals("h1", endpoints.getFirst().getAddress().host());
-      assertEquals(4200, endpoints.getFirst().getAddress().port());
+      assertEquals("h1", endpoints.get(0).getAddress().host());
+      assertEquals(4200, endpoints.get(0).getAddress().port());
       assertEquals("h2", endpoints.get(1).getAddress().host());
       assertEquals(4200, endpoints.get(1).getAddress().port());
     }
@@ -252,7 +252,7 @@ class CrateConnectionUriParserTest {
       assertEquals("u", options.getUser());
       assertEquals("p", options.getPassword());
       assertEquals(1, options.getEndpoints().size());
-      assertEquals("localhost", options.getEndpoints().getFirst().getAddress().host());
+      assertEquals("localhost", options.getEndpoints().get(0).getAddress().host());
     }
 
     @Test
@@ -261,8 +261,8 @@ class CrateConnectionUriParserTest {
       CrateConnectOptions options = new CrateConnectOptions(config);
       List<CrateEndpoint> endpoints = options.getEndpoints();
       assertEquals(2, endpoints.size());
-      assertEquals("a", endpoints.getFirst().getAddress().host());
-      assertEquals(4200, endpoints.getFirst().getAddress().port());
+      assertEquals("a", endpoints.get(0).getAddress().host());
+      assertEquals(4200, endpoints.get(0).getAddress().port());
       assertEquals("b", endpoints.get(1).getAddress().host());
       assertEquals(4201, endpoints.get(1).getAddress().port());
     }
@@ -275,7 +275,7 @@ class CrateConnectionUriParserTest {
     void hostname_withHyphenAndDots() {
       List<CrateEndpoint> endpoints = CrateConnectionUriParser.parseEndpoints("crate://my-server.example.com:4200");
       assertEquals(1, endpoints.size());
-      assertEquals("my-server.example.com", endpoints.getFirst().getAddress().host());
+      assertEquals("my-server.example.com", endpoints.get(0).getAddress().host());
     }
 
     @Test
